--- a/feedback.html
+++ b/feedback.html
@@ -88,7 +88,7 @@
             font-size: 14px;
         }
 
-        select, textarea {
+        select, textarea, input[type="text"] {
             width: 100%;
             padding: 12px;
             border: 1px solid #ddd;
@@ -98,7 +98,7 @@
             transition: border-color 0.3s;
         }
 
-        select:focus, textarea:focus {
+        select:focus, textarea:focus, input[type="text"]:focus {
             outline: none;
             border-color: #1e5ba8;
         }
@@ -158,6 +158,27 @@
             <p>Your feedback is anonymous and helps us improve the quality of education and facilities.</p>
             
             <form id="feedbackForm" method="POST" action="submit.php">
+                <!-- Optional fields -->
+                <div class="form-group">
+                    <label for="studentName">Name</label>
+                    <input type="text" id="studentName" name="studentName" placeholder="Enter your name (optional)">
+                </div>
+
+                <div class="form-group">
+                    <label for="rollNo">Roll no.</label>
+                    <input type="text" id="rollNo" name="rollNo" placeholder="Enter your roll number (optional)">
+                </div>
+
+                <div class="form-group">
+                    <label for="department">Department</label>
+                    <input type="text" id="department" name="department" placeholder="Enter your department (optional)">
+                </div>
+
+                <div class="form-group">
+                    <label for="courseNo">Course no.</label>
+                    <input type="text" id="courseNo" name="courseNo" placeholder="Enter your course number (optional)">
+                </div>
+
                 <div class="form-group">
                     <label for="category">Category <span class="required">*</span></label>
                     <select name="category" id="category" required>
@@ -220,6 +241,10 @@
                 const category = document.getElementById('category').value;
                 const feedback = document.getElementById('feedback').value.trim();
                 const urgency = document.getElementById('urgency').value;
+                const studentName = (document.getElementById('studentName')?.value || '').trim();
+                const rollNo = (document.getElementById('rollNo')?.value || '').trim();
+                const department = (document.getElementById('department')?.value || '').trim();
+                const courseNo = (document.getElementById('courseNo')?.value || '').trim();
 
                 if (!category || !feedback || !urgency) {
                     alert('Please fill all required fields.');
@@ -231,6 +256,10 @@
                     category: category,
                     text: feedback,
                     urgency: urgency,
+                    studentName: studentName,
+                    rollNo: rollNo,
+                    department: department,
+                    courseNo: courseNo,
                     status: 'pending',
                     createdAt: new Date().toISOString(),
                     createdAtDisplay: formatDate(new Date())
@@ -241,7 +270,15 @@
                     const res = await fetch('http://localhost:3000/api/feedbacks', {
                         method: 'POST',
                         headers: { 'Content-Type': 'application/json' },
-                        body: JSON.stringify({ category, text: feedback, urgency })
+                        body: JSON.stringify({
+                            category,
+                            text: feedback,
+                            urgency,
+                            studentName,
+                            rollNo,
+                            department,
+                            courseNo
+                        })
                     });
                     if (!res.ok) throw new Error('API error');
                     // Optionally mirror to localStorage for offline viewing
