--- a/feedback.html
+++ b/feedback.html
@@ -298,8 +298,8 @@
                     }
                 }
 
-                alert('Thank you! Your feedback has been submitted.');
-                window.location.href = 'admin_dashboard.html';
+                alert('Thank you! Your feedback has been submitted successfully. We appreciate your input!');
+                window.location.href = 'index.html';
             });
         })();
     </script>
