feedback page design changed

--- a/admin_lectures.html
+++ b/admin_lectures.html
@@ -325,7 +325,7 @@
     <nav class="navbar">
         <div class="logo">📚 Academic Admin Dashboard</div>
         <div class="nav-links">
-            <a href="admin_login.html">Switch Department</a>
+            <a href="admin_login.html?switch=1">Switch Department</a>
             <button class="btn-logout" onclick="logout()">Logout</button>
         </div>
     </nav>
