--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@
     <nav class="navbar">
         <div class="logo">Student Feedback Portal</div>
         <div class="nav-links">
+            <a href="feedback.html">Submit Feedback</a>
+            <a href="track-feedback.html">Track Feedback</a>
             <a href="#about">About</a>
             <a href="#contact">Contact</a>
         </div>
@@ -172,8 +174,12 @@
     </section>
 
     <section class="cta">
+        <h2>Ready to Make a Difference?</h2>
         <p>Your feedback is valuable and helps us create a better learning environment for everyone.</p>
-        <a href="feedback.html" class="btn-secondary">Get Started</a>
+        <div class="hero-buttons">
+            <a href="feedback.html" class="btn-primary">Submit Feedback</a>
+            <a href="track-feedback.html" class="btn-secondary">Track Feedback</a>
+        </div>
     </section>
 
     <footer>
