--- a/admin_classrooms.html
+++ b/admin_classrooms.html
@@ -367,6 +367,7 @@
             <select onchange="filterStatus(this.value)">
                 <option value="all">All Status</option>
                 <option value="pending">Pending</option>
+                <option value="in-progress">In Progress</option>
                 <option value="resolved">Resolved</option>
             </select>
 
@@ -468,7 +469,10 @@
 
                 items.forEach(item => {
                     const wrapper = document.createElement('div');
-                    wrapper.className = 'feedback-item' + (item.status === 'resolved' ? ' status-resolved' : '');
+                    let statusClass = '';
+                    if (item.status === 'resolved') statusClass = ' status-resolved';
+                    else if (item.status === 'in-progress') statusClass = ' status-in-progress';
+                    wrapper.className = 'feedback-item' + statusClass;
                     wrapper.dataset.id = item.id;
 
                     const header = document.createElement('div');
