--- a/track-feedback.html
+++ b/track-feedback.html
@@ -464,7 +464,7 @@
         trackingForm.addEventListener('submit', async function(e) {
             e.preventDefault();
             
-            const feedbackId = document.getElementById('feedbackId').value.trim().toUpperCase();
+            const feedbackId = document.getElementById('feedbackId').value.trim();
             
             if (!feedbackId) {
                 showError('Please enter a feedback ID');
@@ -539,7 +539,7 @@
             let timelineHTML = '';
             const timelineSteps = [
                 { key: 'submitted', label: 'Feedback Submitted', completed: true },
-                { key: 'reviewed', label: 'Under Review', completed: feedback.status !== 'pending' },
+                { key: 'reviewed', label: 'Under Review', completed: feedback.status === 'in-progress' || feedback.status === 'resolved' },
                 { key: 'resolved', label: 'Action Taken', completed: feedback.status === 'resolved' }
             ];
 
@@ -548,6 +548,8 @@
                 if (step.completed) {
                     dotClass = 'completed';
                 } else if (feedback.status === 'in-progress' && step.key === 'reviewed') {
+                    dotClass = 'current';
+                } else if (feedback.status === 'resolved' && step.key === 'resolved') {
                     dotClass = 'current';
                 }
 
