--- a/report.html
+++ b/report.html
@@ -282,7 +282,15 @@
 </head>
 <body>
     <nav class="navbar no-print">
-        <div class="logo">Admin Dashboard</div>
+        <div class="logo">
+            <div class="logo-container">
+                <img src="assets/logos/IITB logo.png" alt="Institute Logo" class="logo-img" onerror="this.style.display='none'">
+                <div class="logo-text">
+                    <div class="logo-main-text">Indian Institute of Technology Bombay</div>
+                    <div class="logo-sub-text">Admin Dashboard</div>
+                </div>
+            </div>
+        </div>
         <div class="nav-links">
             <a href="index.html">Home</a>
             <a href="admin_dashboard.html">Dashboard</a>
