--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -8,7 +8,12 @@
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #f5f5f5; color: #333; }
         .navbar { width: 100%; padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; background: #1e5ba8; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
-        .logo { font-size: 22px; font-weight: 600; color: white; }
+        .logo { display: flex; align-items: center; gap: 20px; font-size: 22px; font-weight: 600; color: white; }
+        .logo-container { display: flex; flex-direction: row; align-items: center; gap: 15px; }
+        .logo-img { height: 70px; width: auto; object-fit: contain; }
+        .logo-text { display: flex; flex-direction: column; align-items: flex-start; gap: 2px; }
+        .logo-main-text { font-size: 20px; font-weight: 700; color: white; line-height: 1.1; }
+        .logo-sub-text { font-size: 16px; font-weight: 600; color: rgba(255, 255, 255, 0.95); line-height: 1.1; }
         .nav-links { display: flex; gap: 30px; align-items: center; }
         .nav-links a { color: white; text-decoration: none; transition: opacity 0.3s; font-size: 14px; }
         .nav-links a:hover { opacity: 0.8; }
@@ -43,7 +48,15 @@
     </head>
     <body>
         <nav class="navbar">
-            <div class="logo">🔧 Super Admin Dashboard</div>
+            <div class="logo">
+                <div class="logo-container">
+                    <img src="assets/logos/IITB logo.png" alt="Institute Logo" class="logo-img" onerror="this.style.display='none'">
+                    <div class="logo-text">
+                        <div class="logo-main-text">Indian Institute of Technology Bombay</div>
+                        <div class="logo-sub-text">🔧 Super Admin Dashboard</div>
+                    </div>
+                </div>
+            </div>
             <div class="nav-links">
                 <a href="admin_login.html?switch=1">Switch Department</a>
                 <button class="btn-logout" onclick="logout()">Logout</button>
