--- a/index.html
+++ b/index.html
@@ -32,9 +32,46 @@
         }
 
         .logo {
+            display: flex;
+            align-items: center;
+            gap: 20px;
             font-size: 22px;
             font-weight: 600;
             color: white;
+        }
+
+        .logo-container {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            gap: 15px;
+        }
+
+        .logo-img {
+            height: 70px;
+            width: auto;
+            object-fit: contain;
+        }
+
+        .logo-text {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 2px;
+        }
+
+        .logo-main-text {
+            font-size: 20px;
+            font-weight: 700;
+            color: white;
+            line-height: 1.1;
+        }
+
+        .logo-sub-text {
+            font-size: 16px;
+            font-weight: 600;
+            color: rgba(255, 255, 255, 0.95);
+            line-height: 1.1;
         }
 
         .nav-links {
@@ -144,10 +181,11 @@
         }
 
         footer {
-            padding: 30px 5%;
             background: #1e5ba8;
-            text-align: center;
             color: white;
+            text-align: center;
+            padding: 20px;
+            margin-top: 60px;
         }
 
         footer p {
@@ -157,7 +195,15 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo">Student Feedback Portal</div>
+        <div class="logo">
+            <div class="logo-container">
+                <img src="assets/logos/IITB logo.png" alt="Institute Logo" class="logo-img" onerror="this.style.display='none'">
+                <div class="logo-text">
+                    <div class="logo-main-text">Indian Institute of Technology Bombay</div>
+                    <div class="logo-sub-text">Student Feedback Portal</div>
+                </div>
+            </div>
+        </div>
         <div class="nav-links">
             <a href="feedback.html">Submit Feedback</a>
             <a href="track-feedback.html">Track Feedback</a>
