--- a/track-feedback.html
+++ b/track-feedback.html
@@ -34,9 +34,46 @@
         }
 
         .logo {
-            color: white;
+            display: flex;
+            align-items: center;
+            gap: 20px;
             font-size: 22px;
             font-weight: 600;
+            color: white;
+        }
+
+        .logo-container {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            gap: 15px;
+        }
+
+        .logo-img {
+            height: 70px;
+            width: auto;
+            object-fit: contain;
+        }
+
+        .logo-text {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 2px;
+        }
+
+        .logo-main-text {
+            font-size: 20px;
+            font-weight: 700;
+            color: white;
+            line-height: 1.1;
+        }
+
+        .logo-sub-text {
+            font-size: 16px;
+            font-weight: 600;
+            color: rgba(255, 255, 255, 0.95);
+            line-height: 1.1;
         }
 
         .nav-links a {
@@ -397,7 +434,15 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="navbar-content">
-            <div class="logo">Student Feedback Portal</div>
+            <div class="logo">
+                <div class="logo-container">
+                    <img src="assets/logos/IITB logo.png" alt="Institute Logo" class="logo-img" onerror="this.style.display='none'">
+                    <div class="logo-text">
+                        <div class="logo-main-text">Indian Institute of Technology Bombay</div>
+                        <div class="logo-sub-text">Student Feedback Portal</div>
+                    </div>
+                </div>
+            </div>
             <div class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="feedback.html">Submit Feedback</a>
