Changes made on admin login page

--- a/admin_classrooms.html
+++ b/admin_classrooms.html
@@ -454,9 +454,10 @@
 
             async function load() {
                 try {
-                    const res = await fetch('http://localhost:3000/api/feedbacks');
+                    const res = await fetch('/api/feedbacks');
                     if (!res.ok) throw new Error('API error');
-                    const allFeedbacks = await res.json();
+                    const json = await res.json();
+                    const allFeedbacks = Array.isArray(json) ? json : (json && json.data) || [];
                     // Filter only classrooms feedback
                     feedbacks = allFeedbacks.filter(f => f.category === 'Classrooms');
                     localStorage.setItem('feedbacks', JSON.stringify(allFeedbacks));
@@ -633,8 +634,9 @@
 
             async function onResolve(id) {
                 try {
-                    const res = await fetch(`http://localhost:3000/api/feedbacks/${encodeURIComponent(id)}/resolve`, {
-                        method: 'PATCH'
+                    const res = await fetch(`/api/feedbacks/${encodeURIComponent(id)}/resolve`, {
+                        method: 'PATCH',
+                        credentials: 'include'
                     });
                     if (!res.ok) throw new Error('API error');
                     const updated = await res.json();
@@ -656,8 +658,9 @@
             async function onDelete(id) {
                 if (!confirm('Are you sure you want to delete this feedback?')) return;
                 try {
-                    const res = await fetch(`http://localhost:3000/api/feedbacks/${encodeURIComponent(id)}`, {
-                        method: 'DELETE'
+                    const res = await fetch(`/api/feedbacks/${encodeURIComponent(id)}`, {
+                        method: 'DELETE',
+                        credentials: 'include'
                     });
                     if (!res.ok && res.status !== 204) throw new Error('API error');
                 } catch (_) {}
