--- a/feedback.html
+++ b/feedback.html
@@ -640,7 +640,7 @@
 
             try {
                 // Try to send to API
-                const response = await fetch('http://localhost:3000/api/feedbacks', {
+                const response = await fetch('/api/feedbacks', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
