--- a/admin_general.html
+++ b/admin_general.html
@@ -473,9 +473,10 @@
 
             async function load() {
                 try {
-                    const res = await fetch('http://localhost:3000/api/feedbacks');
+                    const res = await fetch('/api/feedbacks');
                     if (!res.ok) throw new Error('API error');
-                    const allFeedbacks = await res.json();
+                    const json = await res.json();
+                    const allFeedbacks = Array.isArray(json) ? json : (json && json.data) || [];
                     // Filter only other feedback
                     feedbacks = allFeedbacks.filter(f => f.category === 'Other');
                     localStorage.setItem('feedbacks', JSON.stringify(allFeedbacks));
@@ -668,11 +669,12 @@
 
             async function onUpdateStatus(id, status) {
                 try {
-                    const res = await fetch(`http://localhost:3000/api/feedbacks/${encodeURIComponent(id)}/status`, {
+                    const res = await fetch(`/api/feedbacks/${encodeURIComponent(id)}/status`, {
                         method: 'PATCH',
                         headers: {
                             'Content-Type': 'application/json'
                         },
+                        credentials: 'include',
                         body: JSON.stringify({ status })
                     });
                     if (!res.ok) throw new Error('API error');
@@ -700,8 +702,9 @@
             async function onDelete(id) {
                 if (!confirm('Are you sure you want to delete this feedback?')) return;
                 try {
-                    const res = await fetch(`http://localhost:3000/api/feedbacks/${encodeURIComponent(id)}`, {
-                        method: 'DELETE'
+                    const res = await fetch(`/api/feedbacks/${encodeURIComponent(id)}`, {
+                        method: 'DELETE',
+                        credentials: 'include'
                     });
                     if (!res.ok && res.status !== 204) throw new Error('API error');
                 } catch (_) {}
