--- a/admin_lectures.html
+++ b/admin_lectures.html
@@ -474,9 +474,10 @@
 
             async function load() {
                 try {
-                    const res = await fetch('http://localhost:3000/api/feedbacks');
+                    const res = await fetch('/api/feedbacks');
                     if (!res.ok) throw new Error('API error');
-                    const allFeedbacks = await res.json();
+                    const json = await res.json();
+                    const allFeedbacks = Array.isArray(json) ? json : (json && json.data) || [];
                     // Filter only lectures feedback
                     feedbacks = allFeedbacks.filter(f => f.category === 'Lectures');
                     localStorage.setItem('feedbacks', JSON.stringify(allFeedbacks));
@@ -665,9 +666,10 @@
 
             async function onUpdateStatus(id, status) {
                 try {
-                    const res = await fetch(`http://localhost:3000/api/feedbacks/${encodeURIComponent(id)}/status`, {
+                    const res = await fetch(`/api/feedbacks/${encodeURIComponent(id)}/status`, {
                         method: 'PATCH',
                         headers: { 'Content-Type': 'application/json' },
+                        credentials: 'include',
                         body: JSON.stringify({ status })
                     });
                     if (!res.ok) throw new Error('API error');
@@ -692,8 +694,9 @@
             async function onDelete(id) {
                 if (!confirm('Are you sure you want to delete this feedback?')) return;
                 try {
-                    const res = await fetch(`http://localhost:3000/api/feedbacks/${encodeURIComponent(id)}`, {
-                        method: 'DELETE'
+                    const res = await fetch(`/api/feedbacks/${encodeURIComponent(id)}`, {
+                        method: 'DELETE',
+                        credentials: 'include'
                     });
                     if (!res.ok && res.status !== 204) throw new Error('API error');
                 } catch (_) {}
