--- a/track-feedback.html
+++ b/track-feedback.html
@@ -521,7 +521,7 @@
 
             try {
                 // Try to fetch from API first
-                const response = await fetch(`http://localhost:4000/api/feedbacks/${feedbackId}`);
+                const response = await fetch(`/api/feedbacks/${feedbackId}`);
                 
                 if (response.ok) {
                     const feedback = await response.json();
