--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,7 +29,7 @@
             align-items: center;
             background: #1e5ba8;
             z-index: 1000;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
 
         .logo {
@@ -193,11 +194,13 @@
         }
     </style>
 </head>
+
 <body>
     <nav class="navbar">
         <div class="logo">
             <div class="logo-container">
-                <img src="assets/logos/IITB logo.png" alt="Institute Logo" class="logo-img" onerror="this.style.display='none'">
+                <img src="assets/logos/IITB logo.png" alt="Institute Logo" class="logo-img"
+                    onerror="this.style.display='none'">
                 <div class="logo-text">
                     <div class="logo-main-text">Indian Institute of Technology Bombay</div>
                     <div class="logo-sub-text">Student Feedback Portal</div>
@@ -215,16 +218,12 @@
     <section class="hero">
         <div class="hero-content">
             <h1>Student Feedback Portal</h1>
-            <p>A simple and secure platform for students to share their valuable feedback and help improve the quality of education at our institute.</p>
-        </div>
-    </section>
-
-    <section class="cta">
-        <h2>Ready to Make a Difference?</h2>
-        <p>Your feedback is valuable and helps us create a better learning environment for everyone.</p>
-        <div class="hero-buttons">
-            <a href="feedback.html" class="btn-primary">Submit Feedback</a>
-            <a href="track-feedback.html" class="btn-secondary">Track Feedback</a>
+            <p>A simple and secure platform for students to share their valuable feedback and help improve the quality
+                of education at our institute.</p>
+            <div class="hero-buttons" style="margin-top: 30px;">
+                <a href="feedback.html" class="btn-secondary">Submit Feedback</a>
+                <a href="track-feedback.html" class="btn-secondary">Track Feedback</a>
+            </div>
         </div>
     </section>
 
@@ -232,4 +231,5 @@
         <p>&copy; 2025 Student Feedback Portal. All rights reserved.</p>
     </footer>
 </body>
+
 </html>
