--- a/feedback.html
+++ b/feedback.html
@@ -327,8 +327,8 @@
 
     <div class="container">
         <div class="form-header">
-            <h1>Submit Academic Feedback</h1>
-            <p>Share your feedback on academic matters to help us improve teaching and learning</p>
+            <h1>Share Your Feedback</h1>
+            <p>Your feedback is anonymous and helps us improve the quality of education</p>
         </div>
 
         <div class="form-card">
