--- a/feedback.html
+++ b/feedback.html
@@ -334,9 +334,8 @@
         <div class="form-card">
             <div class="form-content">
                 <div class="info-box">
-                    <p><strong>Focus on Academics:</strong> This portal is for feedback related to courses, teaching,
-                        evaluation, and academic events. For infrastructure or maintenance issues, please contact the
-                        appropriate department.</p>
+                    <p><strong>Your feedback is valuable!</strong> Share your honest feedback to help us create a better
+                        learning environment. All submissions are confidential.</p>
                 </div>
 
                 <form id="feedbackForm">
