--- a/feedback.html
+++ b/feedback.html
@@ -166,11 +166,16 @@
             margin-bottom: 30px;
         }
 
-        .info-box p {
+        .info-box p,
+        .info-box ul {
             color: #1565c0;
             font-size: 14px;
             line-height: 1.6;
             margin: 0;
+        }
+
+        .info-box ul {
+            padding-left: 20px;
         }
 
         .submit-section {
@@ -334,8 +339,11 @@
         <div class="form-card">
             <div class="form-content">
                 <div class="info-box">
-                    <p><strong>Your feedback is valuable!</strong> Share your honest feedback to help us create a better
-                        learning environment. All submissions are confidential.</p>
+                    <ul>
+                        <li><strong>Your feedback is valuable!</strong></li>
+                        <li>Share your honest feedback to help us create a better learning environment.</li>
+                        <li>All submissions are confidential.</li>
+                    </ul>
                 </div>
 
                 <form id="feedbackForm">
